Markdown view: fix cropping

--- a/src/components/MarkdownView.module.css
+++ b/src/components/MarkdownView.module.css
@@ -8,9 +8,18 @@
 .item {
 	flex-basis: 0;
 	flex-grow: 1;
-	display: grid;
 	min-width: 18rem;
+}
+
+.item_in {
+	min-height: 100%;
+	display: flex;
+}
+
+.item_content {
 	overflow-x: auto;
+	display: grid;
+	min-height: 100%;
 }
 
 .content,
